[gd_scene load_steps=6 format=3 uid="uid://ctavmldeu5x7h"]

[ext_resource type="PackedScene" uid="uid://dec123w1cgntr" path="res://Scenes/InteractWindows/InteractWindow.tscn" id="1_3chuh"]
[ext_resource type="Script" uid="uid://2jignfsim025" path="res://Scenes/InteractWindows/Wall3/SafeWindow.gd" id="2_g200w"]
[ext_resource type="Texture2D" uid="uid://b1h0yob5m3ijc" path="res://Assets/close_ups/safe_closed_close.png" id="2_oxcup"]
[ext_resource type="PackedScene" uid="uid://o45di6s0nofl" path="res://Scenes/InteractWindows/Wall3/SafeWindowCode.tscn" id="3_dvynt"]
[ext_resource type="PackedScene" uid="uid://djtuoj7l6mmmb" path="res://Scenes/InteractWindows/Wall3/SafeInsideWindow.tscn" id="5_ydyj6"]

[node name="SafeWindow" instance=ExtResource("1_3chuh")]
script = ExtResource("2_g200w")
target_password = Array[int]([2, 7, 1, 6, 1, 4])

[node name="TextureRect" parent="." index="0"]
texture = ExtResource("2_oxcup")

[node name="SafeWindowCode" parent="." index="2" instance=ExtResource("3_dvynt")]
layout_mode = 1

[node name="Sound" type="AudioStreamPlayer" parent="." index="3"]

[node name="SafeTrigger" type="TextureButton" parent="." index="4"]
layout_mode = 0
offset_left = 463.0
offset_top = 296.0
offset_right = 1027.0
offset_bottom = 763.0
mouse_filter = 2

[node name="SafeInsideWindow" parent="." index="5" instance=ExtResource("5_ydyj6")]
visible = false
layout_mode = 1

[connection signal="pressed" from="SafeTrigger" to="." method="_on_safe_trigger_pressed"]
